Removed the word "serie" from LeagueRequestHandler